--- a/Ensemble.ipynb
+++ b/Ensemble.ipynb
@@ -70,13 +70,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 0과 1이 아닌 확률로 예측"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -89,13 +82,10 @@
     "    with torch.no_grad():\n",
     "        for imgs in tqdm(iter(test_loader)):\n",
     "            imgs = imgs.float().to(device)\n",
-    "            \n",
     "            probs = model(imgs)\n",
-    "\n",
-    "            probs  = probs.cpu().detach().numpy()\n",
-    "            preds = probs \n",
-    "            preds = preds.astype(float)\n",
-    "            predictions += preds.tolist()\n",
+    "            probs = probs.cpu().detach().numpy()\n",
+    "            probs = probs.astype(float)\n",
+    "            predictions += probs.tolist()\n",
     "    return predictions"
    ]
   },
@@ -107,10 +97,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### model 학습에 사용한 정보 load"
+    "### model 1 예측"
    ]
   },
   {
@@ -129,8 +120,8 @@
    "source": [
     "CFG = {\n",
     "    'IMG_SIZE':224,\n",
-    "    'EPOCHS':100,\n",
-    "    'LEARNING_RATE':3e-3,\n",
+    "    # 'EPOCHS':100,\n",
+    "    # 'LEARNING_RATE':3e-3,\n",
     "    'BATCH_SIZE': 128,\n",
     "    'SEED':2023\n",
     "}\n",
@@ -141,38 +132,13 @@
     "                            ToTensorV2()\n",
     "                            ])\n",
     "\n",
-    "def seed_everything(seed):\n",
-    "    random.seed(seed)\n",
-    "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
-    "    np.random.seed(seed)\n",
-    "    torch.manual_seed(seed)\n",
-    "    torch.cuda.manual_seed(seed)\n",
-    "    torch.backends.cudnn.deterministic = True\n",
-    "    torch.backends.cudnn.benchmark = True\n",
-    "seed_everything(CFG['SEED'])\n",
+    "test = pd.read_csv('/dacon-blocks/test.csv')\n",
+    "test['img_path'] = test['img_path'].apply(lambda x: '/dacon-blocks/test_whitegrid' + x[6:])\n",
     "\n",
-    "class CustomDataset(Dataset):\n",
-    "    def __init__(self, img_path_list, label_list, transforms=None):\n",
-    "        self.img_path_list = img_path_list\n",
-    "        self.label_list = label_list\n",
-    "        self.transforms = transforms\n",
-    "        \n",
-    "    def __getitem__(self, index):\n",
-    "        img_path = self.img_path_list[index]\n",
-    "        \n",
-    "        image = cv2.imread(img_path)\n",
-    "        if self.transforms is not None:\n",
-    "            image = self.transforms(image=image)['image']\n",
-    "        \n",
-    "        if self.label_list is not None:\n",
-    "            label = torch.FloatTensor(self.label_list[index])\n",
-    "            return image, label\n",
-    "        else:\n",
-    "            return image\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.img_path_list)\n",
-    "    \n",
+    "test_dataset = CustomDataset(test['img_path'].values, None, test_transform)\n",
+    "test_loader = DataLoader(test_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=False, num_workers=7)\n",
+    "\n",
+    "\n",
     "fc = nn.Sequential(OrderedDict([\n",
     "('bn1', nn.BatchNorm1d(1000)),\n",
     "('drop1', nn.Dropout(p=0.5)),\n",
@@ -184,7 +150,7 @@
     "]))\n",
     "\n",
     "class BaseModel(nn.Module):\n",
-    "    def __init__(self, num_classes=10):\n",
+    "    def __init__(self):\n",
     "        super(BaseModel, self).__init__()\n",
     "        self.backbone = models.resnext50_32x4d(pretrained=True)\n",
     "        for param in self.backbone.parameters():\n",
@@ -254,12 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('/dacon-blocks/test.csv')\n",
-    "test['img_path'] = test['img_path'].apply(lambda x: '/dacon-blocks/test_whitegrid' + x[6:])\n",
-    "\n",
-    "test_dataset = CustomDataset(test['img_path'].values, None, test_transform)\n",
-    "test_loader = DataLoader(test_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=False, num_workers=7)\n",
-    "\n",
     "first_preds = inference(model1, test_loader, device)"
    ]
   },
@@ -309,10 +269,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### model 학습에 사용한 정보 load"
+    "### model2 예측"
    ]
   },
   {
@@ -329,52 +290,6 @@
    },
    "outputs": [],
    "source": [
-    "CFG = {\n",
-    "    'IMG_SIZE':224,\n",
-    "    'EPOCHS':100,\n",
-    "    'LEARNING_RATE':3e-3,\n",
-    "    'BATCH_SIZE': 128,\n",
-    "    'SEED':2023\n",
-    "}\n",
-    "\n",
-    "test_transform = A.Compose([\n",
-    "                            A.Resize(CFG['IMG_SIZE'],CFG['IMG_SIZE']),\n",
-    "                            A.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225), max_pixel_value=255.0, always_apply=False, p=1.0),\n",
-    "                            ToTensorV2()\n",
-    "                            ])\n",
-    "\n",
-    "def seed_everything(seed):\n",
-    "    random.seed(seed)\n",
-    "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
-    "    np.random.seed(seed)\n",
-    "    torch.manual_seed(seed)\n",
-    "    torch.cuda.manual_seed(seed)\n",
-    "    torch.backends.cudnn.deterministic = True\n",
-    "    torch.backends.cudnn.benchmark = True\n",
-    "seed_everything(CFG['SEED'])\n",
-    "\n",
-    "class CustomDataset(Dataset):\n",
-    "    def __init__(self, img_path_list, label_list, transforms=None):\n",
-    "        self.img_path_list = img_path_list\n",
-    "        self.label_list = label_list\n",
-    "        self.transforms = transforms\n",
-    "        \n",
-    "    def __getitem__(self, index):\n",
-    "        img_path = self.img_path_list[index]\n",
-    "        \n",
-    "        image = cv2.imread(img_path)\n",
-    "        if self.transforms is not None:\n",
-    "            image = self.transforms(image=image)['image']\n",
-    "        \n",
-    "        if self.label_list is not None:\n",
-    "            label = torch.FloatTensor(self.label_list[index])\n",
-    "            return image, label\n",
-    "        else:\n",
-    "            return image\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.img_path_list)\n",
-    "\n",
     "fc = nn.Sequential(OrderedDict([\n",
     "('bn1', nn.BatchNorm1d(1000)),\n",
     "('drop1', nn.Dropout(p=0.5)),\n",
@@ -386,7 +301,7 @@
     "]))\n",
     "\n",
     "class BaseModel(nn.Module):\n",
-    "    def __init__(self, num_classes=10):\n",
+    "    def __init__(self):\n",
     "        super(BaseModel, self).__init__()\n",
     "        self.backbone = models.resnext50_32x4d(pretrained=True)\n",
     "        for param in self.backbone.parameters():\n",
@@ -458,12 +373,6 @@
     }
    ],
    "source": [
-    "test = pd.read_csv('/dacon-blocks/test.csv')\n",
-    "test['img_path'] = test['img_path'].apply(lambda x: '/dacon-blocks/test_whitegrid' + x[6:])\n",
-    "\n",
-    "test_dataset = CustomDataset(test['img_path'].values, None, test_transform)\n",
-    "test_loader = DataLoader(test_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=False, num_workers=7)\n",
-    "\n",
     "second_preds = inference(model2, test_loader, device)"
    ]
   },
@@ -512,62 +421,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### model 학습에 사용한 정보 load"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-01-29T05:58:17.299169Z",
-     "iopub.status.busy": "2023-01-29T05:58:17.298551Z",
-     "iopub.status.idle": "2023-01-29T05:58:17.307448Z",
-     "shell.execute_reply": "2023-01-29T05:58:17.306351Z",
-     "shell.execute_reply.started": "2023-01-29T05:58:17.299130Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "CFG = {\n",
-    "    'IMG_SIZE':224,\n",
-    "    'EPOCHS':100,\n",
-    "    'PATIENCE': 10,\n",
-    "    'LEARNING_RATE':4e-4,\n",
-    "    'BATCH_SIZE': 128,\n",
-    "    'SEED':2023\n",
-    "}\n",
-    "\n",
-    "test_transform = A.Compose([\n",
-    "                            A.Resize(CFG['IMG_SIZE'],CFG['IMG_SIZE']),\n",
-    "                            A.Normalize(mean=(0, 0, 0), std=(1,1,1), max_pixel_value=255.0, always_apply=False, p=1.0),\n",
-    "                            ToTensorV2()\n",
-    "                            ])\n",
-    "\n",
-    "class CustomDataset(Dataset):\n",
-    "    def __init__(self, img_path_list, label_list, transforms=None):\n",
-    "        self.img_path_list = img_path_list\n",
-    "        self.label_list = label_list\n",
-    "        self.transforms = transforms\n",
-    "        \n",
-    "    def __getitem__(self, index):\n",
-    "        img_path = self.img_path_list[index]\n",
-    "        \n",
-    "        image = cv2.imread(img_path)\n",
-    "        if self.transforms is not None:\n",
-    "            image = self.transforms(image=image)['image']\n",
-    "        \n",
-    "        if self.label_list is not None:\n",
-    "            label = torch.FloatTensor(self.label_list[index])\n",
-    "            return image, label\n",
-    "        else:\n",
-    "            return image\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.img_path_list)"
+    "### model 3 예측"
    ]
   },
   {
@@ -585,12 +443,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('/dacon-blocks/test.csv')\n",
-    "test['img_path'] = test['img_path'].apply(lambda x: '/dacon-blocks/test_whitegrid' + x[6:])\n",
-    "\n",
-    "test_dataset = CustomDataset(test['img_path'].values, None, test_transform)\n",
-    "test_loader = DataLoader(test_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=False, num_workers=7)\n",
-    "\n",
     "third_preds = inference(model3, test_loader, device)"
    ]
   },
@@ -640,10 +492,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### model 학습에 사용한 정보 load"
+    "### model 4 예측"
    ]
   },
   {
@@ -652,35 +505,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_transform = A.Compose([\n",
-    "                            A.Resize(CFG['IMG_SIZE'],CFG['IMG_SIZE']),\n",
-    "                            A.Normalize(mean=(0, 0, 0), std=(1,1,1), max_pixel_value=255.0, always_apply=False, p=1.0),\n",
-    "                            ToTensorV2()\n",
-    "                            ])\n",
-    "\n",
-    "class CustomDataset(Dataset):\n",
-    "    def __init__(self, img_path_list, label_list, transforms=None):\n",
-    "        self.img_path_list = img_path_list\n",
-    "        self.label_list = label_list\n",
-    "        self.transforms = transforms\n",
-    "        \n",
-    "    def __getitem__(self, index):\n",
-    "        img_path = self.img_path_list[index]\n",
-    "        \n",
-    "        image = cv2.imread(img_path)\n",
-    "        if self.transforms is not None:\n",
-    "            image = self.transforms(image=image)['image']\n",
-    "        \n",
-    "        if self.label_list is not None:\n",
-    "            label = torch.FloatTensor(self.label_list[index])\n",
-    "            return image, label\n",
-    "        else:\n",
-    "            return image\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.img_path_list)\n",
-    "\n",
-    "from collections import OrderedDict\n",
     "fc = nn.Sequential(OrderedDict([\n",
     "('bn1', nn.BatchNorm1d(1000)),\n",
     "('drop1', nn.Dropout(p=0.5)),\n",
@@ -692,7 +516,7 @@
     "]))\n",
     "\n",
     "class BaseModel(nn.Module):\n",
-    "    def __init__(self, num_classes=10):\n",
+    "    def __init__(self):\n",
     "        super(BaseModel, self).__init__()\n",
     "        self.backbone = models.resnext50_32x4d(pretrained=True)\n",
     "        for param in self.backbone.parameters():\n",
@@ -721,12 +545,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('/dacon-blocks/test.csv')\n",
-    "test['img_path'] = test['img_path'].apply(lambda x: '/dacon-blocks/test_whitegrid' + x[6:])\n",
-    "\n",
-    "test_dataset = CustomDataset(test['img_path'].values, None, test_transform)\n",
-    "test_loader = DataLoader(test_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=False, num_workers=7)\n",
-    "\n",
     "fourth_preds = inference(model4, test_loader, device)"
    ]
   },
@@ -760,7 +578,6 @@
    },
    "outputs": [],
    "source": [
-    "#값을 계산하기 위해 np.array 실행\n",
     "a = np.array(first_preds)\n",
     "b = np.array(second_preds)\n",
     "c = np.array(third_preds)\n",
@@ -769,37 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-01-29T05:58:33.445572Z",
-     "iopub.status.busy": "2023-01-29T05:58:33.445312Z",
-     "iopub.status.idle": "2023-01-29T05:58:33.455291Z",
-     "shell.execute_reply": "2023-01-29T05:58:33.454219Z",
-     "shell.execute_reply.started": "2023-01-29T05:58:33.445548Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.93780512e-01, 9.97888029e-01, 2.05219499e-06, 1.02106490e-10,\n",
-       "       1.67343344e-11, 6.17196008e-12, 1.00000000e+00, 2.29292640e-10,\n",
-       "       1.00000000e+00, 1.35424864e-06])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-01-29T05:58:33.457319Z",
@@ -810,30 +597,7 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.00495516e-01, 8.75524859e-01, 3.13298164e-10, ...,\n",
-       "        2.63947976e-14, 1.00000000e+00, 1.41544064e-10],\n",
-       "       [1.02709800e-01, 1.00000000e+00, 9.41041615e-10, ...,\n",
-       "        1.34069849e-11, 1.79601172e-02, 2.26142911e-05],\n",
-       "       [4.19233178e-01, 9.98463273e-01, 3.12214493e-05, ...,\n",
-       "        4.12329677e-06, 6.66614598e-01, 9.99959707e-01],\n",
-       "       ...,\n",
-       "       [1.21581158e-10, 4.21042800e-10, 1.00000000e+00, ...,\n",
-       "        1.00000000e+00, 1.11736209e-10, 1.00000000e+00],\n",
-       "       [2.95706623e-04, 3.35224740e-01, 3.33306392e-01, ...,\n",
-       "        6.13697811e-14, 1.00000000e+00, 9.87041314e-01],\n",
-       "       [9.99173880e-01, 1.29146659e-11, 9.81517375e-01, ...,\n",
-       "        5.93646744e-14, 1.08383442e-08, 1.40001147e-06]])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#동일한 비율로 각 확률값 계산\n",
     "ensem = (a*0.25 + b*0.25 +c*0.25 + d*0.25)\n",
@@ -842,8 +606,7 @@
     "ensem[ensem <= 0.5] = 0\n",
     "ensem[ensem > 0.5] = 1\n",
     "\n",
-    "ensem = ensem.astype(int)\n",
-    "ensem"
+    "ensem = ensem.astype(int)"
    ]
   },
   {
@@ -852,8 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = ensem.tolist()\n",
-    "preds[1]"
+    "preds = ensem.tolist()"
    ]
   },
   {
@@ -867,13 +629,6 @@
     "print(submit.head())\n",
     "submit.to_csv('ensemble.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
