--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2018,7 +2018,7 @@
     "    best_model = None\n",
     "    early_stopping = EarlyStopping(patience=CFG['PATIENCE'], verbose = True)\n",
     "    \n",
-    "    wandb.init(project='dacon-blocks', entity='soobin',name='resnext50_labels3_total',\n",
+    "    wandb.init(project='dacon-blocks', entity='ahnjc',name='resnext50_labels3_total',\n",
     "      config={\"learning_rate\": CFG['LEARNING_RATE'],\n",
     "              \"epochs\": CFG['EPOCHS'],\n",
     "              \"batch_size\": CFG['BATCH_SIZE']\n",
